# music-companion

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml  issue-labels.yml  release.yml
src/: hotkeys.test.ts  hotkeys.ts  lyrics-cache.test.ts  lyrics-cache.ts  lyrics.test.ts  lyrics.ts  main.ts  playback-clock.test.ts  playback-clock.ts  settings.test.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkeys.rs  lib.rs  main.rs
