[package]
name = "music-companion"
version = "0.1.0"
description = "Windows lyrics overlay built with Tauri"
authors = ["Music Companion"]
edition = "2021"

[lib]
name = "music_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Foundation", "Foundation_Collections", "Media_Control"] }
winreg = "0.52"
